--- a/src/cards/Product.css
+++ b/src/cards/Product.css
@@ -137,6 +137,21 @@
   .product-image {
     height: 180px;
   }
+  .product-footer {
+    opacity: 1; 
+    pointer-events: auto; 
+  }
+  .add-to-cart-button,
+  .icon-button {
+    opacity: 1; 
+    pointer-events: auto; 
+    font-size: 0.50rem;
+  }
+  .add-to-cart-button:hover,
+  .icon-button:hover {
+    background-color: #ec6801; 
+  
+  }
 }
 
 @media (max-width: 900px) {
@@ -151,6 +166,21 @@
 
   .product-image {
     height: 200px;
+  }
+  .product-footer {
+    opacity: 1; 
+    pointer-events: auto; 
+  }
+  .add-to-cart-button,
+  .icon-button {
+    opacity: 1; 
+    pointer-events: auto; 
+    font-size: 0.50rem;
+  }
+  .add-to-cart-button:hover,
+  .icon-button:hover {
+    background-color: #ec6801; 
+  
   }
 }
 
@@ -171,6 +201,21 @@
     font-size: 0.60rem;
     font-weight: bold;
   }
+  .product-footer {
+    opacity: 1; 
+    pointer-events: auto; 
+  }
+  .add-to-cart-button,
+  .icon-button {
+    opacity: 1; 
+    pointer-events: auto; 
+    font-size: 0.50rem;
+  }
+  .add-to-cart-button:hover,
+  .icon-button:hover {
+    background-color: #ec6801; 
+  
+  }
 }
 
 @media (max-width: 600px) {
@@ -185,5 +230,20 @@
 
   .product-image {
     height: 120px;
+  }
+  .product-footer {
+    opacity: 1; 
+    pointer-events: auto; 
+  }
+  .add-to-cart-button,
+  .icon-button {
+    opacity: 1; 
+    pointer-events: auto; 
+    font-size: 0.50rem;
+  }
+  .add-to-cart-button:hover,
+  .icon-button:hover {
+    background-color: #ec6801; 
+  
   }
 }
