--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -181,3 +181,15 @@
         text-align: center;
     }
 }
+@media (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1){
+    
+    .map-section .gmap-frame #gmap-canvas{
+        height: 70vh !important;
+        width: 500px !important;
+        border-radius: 5px;
+        margin-bottom: 20px;
+    }
+    .store-loc{
+        text-align: center;
+    }
+}
